모드 리팩토링 및 프롬프트 구체화